# telegrambetsbot

./: pyproject.toml
telegrambets_bot/: .env  .env.example  .gitignore  loader.py  todone
telegrambets_bot/handlers/users/: __init__.py  add_bet.py  add_post.py  bank.py  cancel.py  check_bets.py  help.py  start.py
telegrambets_bot/keyboards/default/: __init__.py  bank_post_keyboard.py  bet_type_keyboard.py  game_type_keyboard.py  map_winner.py  menu_keyboard.py  postim.py  procent_banka.py  winlose_keyboad.py
telegrambets_bot/states/: BetState.py  bank_post.py  check_bets.py  new_bet.py  new_post.py
telegrambets_bot/utils/db_api/: db.py
tests/: test_telegrambets_bot.py
