[tool.poetry]
name = "telegrambets_bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.11.2"
pylint = "^2.6.0"
python-dotenv = "^0.15.0"
google-api-python-client = "^1.12.8"
oauth2client = "^4.1.3"
google-auth-oauthlib = "^0.4.2"
apiclient = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
